--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             let intervals = [null, null, null, null];
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
+            let finaleGeluidGespeeld = false; // Nieuwe variabele om bij te houden of het finale geluid al is afgespeeld
 
             // Audio elementen voor beide geluiden
             const timerSound = document.getElementById("timerSound");
@@ -122,13 +123,14 @@
                         timers[geselecteerdeTimer]--;
                         updateWeergave();
                         updateDatabase();
-                    } else if (timers[geselecteerdeTimer] === 0) {
-                        // Timer is op 0, stop het timer-geluid en speel het finale geluid af
+                    } else if (timers[geselecteerdeTimer] === 0 && !finaleGeluidGespeeld) {
+                        // Timer is op 0 en het finale geluid is nog niet afgespeeld
                         timerSound.pause();  // Stop het timer-geluid
                         timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
                         finaleSound.play().catch((error) => {
                             console.log("Finale geluid kon niet worden afgespeeld:", error);
                         });
+                        finaleGeluidGespeeld = true;  // Zet de variabele om aan te geven dat het finale geluid is afgespeeld
                     }
                 }, 1000);
 
@@ -155,6 +157,7 @@
 
             function resetTimer() {
                 timers = [60, 60, 60, 60];
+                finaleGeluidGespeeld = false; // Reset de finaleGeluidGespeeld variabele bij resetten van de timer
                 updateWeergave();
                 updateDatabase();
             }
