--- a/index.html
+++ b/index.html
@@ -34,6 +34,44 @@
             const timerEndSound = document.getElementById("timerEndSound");
             const finaleSound = document.getElementById("finaleSound");  // Het finale geluid
 
+            // Firebase-referenties voor geluidsstatus
+            const audioStatusRef = firebase.database().ref('audioStatus');
+
+            function playAudio(sound) {
+                sound.play().catch((error) => {
+                    console.log("Audio kon niet worden afgespeeld:", error);
+                });
+            }
+
+            function syncAudioStatus(audioType, status) {
+                // Sync audio status naar Firebase
+                audioStatusRef.set({
+                    audioType: audioType,
+                    status: status
+                });
+            }
+
+            // Synchroniseer audio tussen alle browsers
+            audioStatusRef.on('value', (snapshot) => {
+                const data = snapshot.val();
+                if (data) {
+                    const audioType = data.audioType;
+                    const status = data.status;
+
+                    if (status === 'play' && audioType === 'timerSound') {
+                        playAudio(timerSound);
+                    } else if (status === 'play' && audioType === 'finaleSound') {
+                        playAudio(finaleSound);
+                    } else if (status === 'stop' && audioType === 'timerSound') {
+                        timerSound.pause();
+                        timerSound.currentTime = 0;
+                    } else if (status === 'stop' && audioType === 'finaleSound') {
+                        finaleSound.pause();
+                        finaleSound.currentTime = 0;
+                    }
+                }
+            });
+
             function hideIfNeeded() {
                 const params = new URLSearchParams(window.location.search);
                 const view = params.get('view');
@@ -124,20 +162,19 @@
                         updateWeergave();
                         updateDatabase();
                     } else if (timers[geselecteerdeTimer] === 0 && !finaleGeluidGespeeld) {
-                        // Timer is op 0 en het finale geluid is nog niet afgespeeld
                         timerSound.pause();  // Stop het timer-geluid
                         timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
                         finaleSound.play().catch((error) => {
                             console.log("Finale geluid kon niet worden afgespeeld:", error);
                         });
-                        finaleGeluidGespeeld = true;  // Zet de variabele om aan te geven dat het finale geluid is afgespeeld
+                        finaleGeluidGespeeld = true;
+                        // Sync het afspelen van het finale geluid
+                        syncAudioStatus('finaleSound', 'play');
                     }
                 }, 1000);
 
-                // Speel het geluid af wanneer de timer start
-                timerSound.play().catch((error) => {
-                    console.log("Audio kon niet worden afgespeeld:", error);
-                });
+                // Sync het afspelen van het timer geluid
+                syncAudioStatus('timerSound', 'play');
             }
 
             // Stop de timer en stop het geluid, speel het stop geluid af
@@ -146,38 +183,43 @@
                 intervals[geselecteerdeTimer] = null;
 
                 // Stop het timer-geluid
-                timerSound.pause();  // Stop het timer-geluid
-                timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
-                
-                // Speel het stop geluid af
+                timerSound.pause();  
+                timerSound.currentTime = 0;
+
+                // Stop het stopgeluid
                 timerEndSound.play().catch((error) => {
                     console.log("Stopgeluid kon niet worden afgespeeld:", error);
                 });
+
+                // Sync het stoppen van het timer geluid
+                syncAudioStatus('timerSound', 'stop');
             }
 
             function resetTimer() {
-                timers = [60, 60, 60, 60];  // Zet de timers terug naar 60 seconden
-                finaleGeluidGespeeld = false;  // Reset de finaleGeluidGespeeld variabele
-                updateWeergave();  // Werk de weergave bij op basis van de nieuwe timerwaarden
-                updateDatabase();  // Werk de timerwaarden bij in de database
+                timers = [60, 60, 60, 60]; 
+                finaleGeluidGespeeld = false; 
+                updateWeergave();  
+                updateDatabase();  
 
                 // Stop alle lopende intervallen
                 intervals.forEach((interval, index) => {
                     if (interval) {
-                        clearInterval(interval);  // Stop het interval van de timer
-                        intervals[index] = null;   // Zet het interval terug naar null
+                        clearInterval(interval);  
+                        intervals[index] = null;  
                     }
                 });
 
-                // Stop het timer-geluid en zet het weer terug naar het begin
+                // Stop alle geluiden en reset naar begin
                 timerSound.pause();
                 timerSound.currentTime = 0;
                 timerEndSound.pause();
                 timerEndSound.currentTime = 0;
-
-                // Zet het finale geluid terug naar het begin
                 finaleSound.pause();
                 finaleSound.currentTime = 0;
+
+                // Sync het stoppen van alle geluiden
+                syncAudioStatus('timerSound', 'stop');
+                syncAudioStatus('finaleSound', 'stop');
             }
 
             function pasTijdAan(aantal) {
