--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             const timerSoundRef = firebase.database().ref('playTimerSound');
             const finaleSoundRef = firebase.database().ref('playFinaleSound');
             const timerStatusRef = firebase.database().ref('timerStatus'); // Nieuwe referentie voor de status van de timer
+            const stopSoundRef = firebase.database().ref('playStopSound'); // Nieuwe referentie voor het stopgeluid
 
             // Functie om het geluid af te spelen via Firebase synchronisatie
             timerSoundRef.on('value', (snapshot) => {
@@ -55,6 +56,16 @@
                         console.log("Finale geluid kon niet worden afgespeeld:", error);
                     });
                     finaleSoundRef.set(false);  // Zet het terug naar false nadat het geluid is afgespeeld
+                }
+            });
+
+            // Luister naar de stopgeluidstatus
+            stopSoundRef.on('value', (snapshot) => {
+                if (snapshot.val() === true) {
+                    timerEndSound.play().catch((error) => {
+                        console.log("Stopgeluid kon niet worden afgespeeld:", error);
+                    });
+                    stopSoundRef.set(false);  // Zet de waarde terug naar false nadat het geluid is afgespeeld
                 }
             });
 
@@ -160,14 +171,19 @@
                         updateWeergave();
                         updateDatabase();
                     } else if (timers[geselecteerdeTimer] === 0 && !finaleGeluidGespeeld) {
-                        // Stel het finale geluid in Firebase in
-                        timerSoundRef.set(true);  // Zet timer geluid aan via Firebase
-                        finaleSoundRef.set(true);  // Zet finale geluid aan via Firebase
+                        // Stop het timer-geluid als de timer op 0 komt
+                        timerSound.pause();  // Stop het timer-geluid
+                        timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
+
+                        // Speel het finale geluid af
+                        finaleSound.play().catch((error) => {
+                            console.log("Finale geluid kon niet worden afgespeeld:", error);
+                        });
                         finaleGeluidGespeeld = true;  // Zet de variabele om aan te geven dat het finale geluid is afgespeeld
                     }
                 }, 1000);
 
-                // Speel het geluid af wanneer de timer start
+                // Speel het timer-geluid af
                 timerSoundRef.set(true);  // Zet timer geluid aan via Firebase
             }
 
@@ -180,10 +196,8 @@
                 timerSound.pause();  // Stop het timer-geluid
                 timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
                 
-                // Speel het stop geluid af
-                timerEndSound.play().catch((error) => {
-                    console.log("Stopgeluid kon niet worden afgespeeld:", error);
-                });
+                // Zet het stopgeluid aan via Firebase
+                stopSoundRef.set(true);  // Zet het stopgeluid aan in Firebase
             }
 
             function resetTimer() {
