--- a/index.html
+++ b/index.html
@@ -162,9 +162,17 @@
                 selectedTimerRef.set(index);
             }
 
+            // Variabele om bij te houden of de timer actief is
+            let isTimerActief = false;
+
             // Start de timer en speel het geluid af
             function startTimer() {
-                if (intervals[geselecteerdeTimer]) return;
+                if (intervals[geselecteerdeTimer] || isTimerActief) return; // Voorkom starten als er al een timer loopt
+                isTimerActief = true;  // Zet timer actief op true
+
+                // De timer-selectie uitschakelen
+                document.getElementById("timerSelect").disabled = true;
+
                 intervals[geselecteerdeTimer] = setInterval(() => {
                     if (timers[geselecteerdeTimer] > 0) {
                         timers[geselecteerdeTimer]--;
@@ -176,12 +184,9 @@
                         timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
 
                         // Speel het finale geluid af (1x per timer)
-                        if (!finaleGeluidGespeeld[geselecteerdeTimer]) {
-                            finaleSound.play().catch((error) => {
-                                console.log("Finale geluid kon niet worden afgespeeld:", error);
-                            });
-                            finaleGeluidGespeeld[geselecteerdeTimer] = true; // Zorg ervoor dat het niet opnieuw wordt afgespeeld
-                        }
+                        finaleSound.play().catch((error) => {
+                            console.log("Finale geluid kon niet worden afgespeeld:", error);
+                        });
                     }
                 }, 1000);
 
@@ -197,7 +202,12 @@
                 // Stop het timer-geluid
                 timerSound.pause();  // Stop het timer-geluid
                 timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
-                
+
+                // Zet de timer-selectie weer aan
+                document.getElementById("timerSelect").disabled = false;
+
+                isTimerActief = false;  // Zet timer actief op false
+
                 // Zet het stopgeluid aan via Firebase
                 stopSoundRef.set(true);  // Zet het stopgeluid aan in Firebase
             }
@@ -225,6 +235,11 @@
                 // Zet het finale geluid terug naar het begin
                 finaleSound.pause();
                 finaleSound.currentTime = 0;
+
+                // Zet de timer-selectie weer aan
+                document.getElementById("timerSelect").disabled = false;
+
+                isTimerActief = false;  // Zet timer actief op false
             }
 
             function pasTijdAan(aantal) {
